# Freycoin

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COPYING  IMPLEMENTATION_PLAN.md  Makefile.am  README.md  configure.ac  libfreycoinkernel.pc.in  vcpkg.json
ci/lint/: 04_install.sh  06_script.sh
ci/test/: 00_setup_env.sh  00_setup_env_native_asan.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_msan.sh  00_setup_env_native_tidy.sh  00_setup_env_native_valgrind.sh  01_base_install.sh  02_run_container.py  02_run_container.sh  03_test_script.sh
cmake/: bitcoin-build-config.h.in  freycoin-build-config.h.in  windows-app.manifest.in
cmake/module/: FindGMP.cmake  FindMPFR.cmake  GenerateSetupNsi.cmake  Maintenance.cmake
contrib/: README.md
contrib/debian/: copyright
contrib/devtools/: README.md  gen-freycoin-conf.sh  gen-manpages.py  gen-riecoin-conf.sh
contrib/guix/: INSTALL.md  README.md  guix-build  manifest.scm  symbol-check.py
contrib/init/: README.md  freycoind.conf  freycoind.init  freycoind.openrc  freycoind.openrcconf  freycoind.service  riecoind.conf  riecoind.init  riecoind.openrc  riecoind.openrcconf  riecoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  (+1 more)
depends/: Makefile  README.md  description.md  funcs.mk  toolchain.cmake.in
doc/: Doxyfile.in  README_windows.txt
explorer/: README.md  app.js  npm-shrinkwrap.json  package.json  pnpm-lock.yaml
share/: setup.nsi.in
site/: index.html
src/: CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addresstype.h  addrman.cpp  addrman_impl.h  arith_uint256.h  bech32.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.h  core_io.h  core_read.cpp  deploymentinfo.cpp  deploymentinfo.h  deploymentstatus.cpp  deploymentstatus.h  dummywallet.cpp  external_signer.h  freycoin-chainstate.cpp  freycoin-cli-res.rc  freycoin-cli.cpp  freycoin-res.rc  freycoin-tx-res.rc  freycoin-tx.cpp  freycoin-wallet-res.rc  (+33 more)
src/gpu/: CMakeLists.txt  cgbn_fermat.cu  cgbn_fermat.h  cuda_fermat.h  cuda_fermat_driver.cpp  cuda_loader.cpp  cuda_loader.h  fermat.cl  fermat.cu  fermat.ptx  fermat_cl_source.h  fermat_ptx_source.h  opencl_fermat.cpp  opencl_fermat.h  opencl_loader.cpp  opencl_loader.h
src/kernel/: CMakeLists.txt  chainparams.cpp  chainparams.h  checkpointdata.h  freycoinkernel.cpp  freycoinkernel.h  freycoinkernel_wrapper.h
src/pow/: CMakeLists.txt  avx512_primality.cpp  avx512_primality.h  combined_sieve.cpp  combined_sieve.h  mining_engine.cpp  mining_engine.h  pow.cpp  pow.h  pow_common.h  pow_processor.h  pow_utils.cpp  pow_utils.h  simd_presieve.cpp  simd_presieve.h  wheel_tables.cpp  wheel_tables.h
src/qt/: CMakeLists.txt  README.md  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  createwalletdialog.cpp  editaddressdialog.cpp  freycoin.cpp  freycoin.h  freycoin.qrc  freycoin_locale.qrc  freycoinaddressvalidator.cpp  freycoinaddressvalidator.h  freycoinamountfield.cpp  freycoinamountfield.h  freycoingui.cpp  freycoingui.h  freycoinstrings.cpp  generatecodedialog.cpp  generatecodedialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  main.cpp  miningpage.cpp  miningpage.h  (+50 more)
src/qt/android/: AndroidManifest.xml
src/qt/android/src/org/bitcoincore/qt/: BitcoinQtActivity.java
src/qt/forms/: addressbookpage.ui  debugwindow.ui  generatecodedialog.ui  helpmessagedialog.ui  intro.ui  miningpage.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: CMakeLists.txt  bitcoin_en.xlf  freycoin_am.ts  freycoin_ar.ts  freycoin_az.ts  freycoin_az@latin.ts  freycoin_be.ts  freycoin_bg.ts  freycoin_bn.ts  freycoin_br.ts  freycoin_bs.ts  freycoin_ca.ts  freycoin_cmn.ts  freycoin_cs.ts  freycoin_cy.ts  freycoin_da.ts  freycoin_de.ts  freycoin_el.ts  freycoin_en.ts  freycoin_eo.ts  freycoin_es.ts  freycoin_et.ts  freycoin_eu.ts  freycoin_fa.ts  freycoin_fi.ts  freycoin_fil.ts  freycoin_fo.ts  freycoin_fr.ts  freycoin_ga.ts  freycoin_ga_IE.ts  freycoin_gl.ts  freycoin_gl_ES.ts  freycoin_gu.ts  freycoin_hak.ts  freycoin_he.ts  freycoin_hi.ts  freycoin_hr.ts  freycoin_hu.ts  freycoin_id.ts  freycoin_is.ts  (+59 more)
src/qt/res/: freycoin-qt-res.rc  riecoin-qt-res.rc
src/qt/res/icons/: Freycoin.icns
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  apptests.cpp  optiontests.cpp  rpcnestedtests.cpp  test_main.cpp  uritests.cpp  wallettests.cpp
src/util/: CMakeLists.txt  chaintype.cpp  chaintype.h  check.cpp  exception.cpp  feefrac.h  fs_helpers.cpp  message.cpp  message.h  overloaded.h  strencodings.h  syserror.cpp  tokenpipe.cpp  trace.h
src/wallet/: CMakeLists.txt  db.cpp  db.h  dump.cpp  external_signer_scriptpubkeyman.cpp  feebumper.cpp  init.cpp  interfaces.cpp  load.cpp  receive.cpp  scriptpubkeyman.cpp  scriptpubkeyman.h  spend.cpp  sqlite.cpp  sqlite.h  transaction.h  types.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  walletutil.cpp  walletutil.h
src/wallet/rpc/: addresses.cpp  backup.cpp  coins.cpp  encrypt.cpp  signmessage.cpp  spend.cpp  transactions.cpp  util.cpp  util.h  wallet.cpp
src/wallet/test/: CMakeLists.txt  coinselector_tests.cpp  db_tests.cpp  ismine_tests.cpp  psbt_wallet_tests.cpp  util.cpp  util.h  wallet_tests.cpp  walletdb_tests.cpp  walletload_tests.cpp
src/wallet/test/fuzz/: CMakeLists.txt  scriptpubkeyman.cpp
test/: CMakeLists.txt  README.md  config.ini.in
(+443 files in other folders)
